# blazerod

./: .bazelignore  .gitignore  .gitmodules  BUILD  BUILD.bazel  LICENSE  README.md  WORKSPACE  go.mod  main.go  main.js  package.json  rollup.config.js  test.js
cmd/blaze/: BUILD.bazel  main.go
pkg/resolver/: BUILD.bazel  file.go  npm.go  resolver.go
pkg/v8engine/: BUILD.bazel  cgo.go  engine.go  errors.go  modules.go  v8engine.cc  v8engine.go  v8engine.h  value.go
pkg/version/: BUILD.bazel  version.go
std/: BUILD.bazel  log.ts  rollup.config.js  tsconfig.json
