package(default_visibility = ["//visibility:public"])

load("@npm//rollup:index.bzl", "rollup")

rollup(
    name = "rollup",
    outs = ["std-bundle.js"],
    args = [
        "-c",
        "$(location rollup.config.js)",
        "--file",
        "$(RULEDIR)/std-bundle.js",
        "$(location log.ts)",
    ],
    data = [
        ".babelrc",
        "log.ts",
        "rollup.config.js",
        "@npm//:node_modules",
    ],
)

load("@npm//typescript:index.bzl", "tsc")

srcs = glob(["*.ts"])

tsc(
    name = "compile",
    outs = [s.replace(".ts", ext) for ext in [
        ".js",
        ".d.ts",
    ] for s in srcs],
    args = [
        "--project",
        "$(location tsconfig.json)",
        "--outDir",
        "$(RULEDIR)",
    ],
    data = srcs + ["tsconfig.json"],
)
