load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/BlazerodJS/blazerod/cmd/blaze",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/v8engine:go_default_library",
        "//pkg/version:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)

go_binary(
    name = "blaze",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
