load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "file.go",
        "npm.go",
        "resolver.go",
    ],
    importpath = "github.com/BlazerodJS/blazerod/pkg/resolver",
    visibility = ["//visibility:public"],
    deps = ["//pkg/v8engine:go_default_library"],
)
