load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@rules_cc//cc:defs.bzl", "cc_import")

cc_import(
    name = "darwin_imported_dylib",
    hdrs = glob(["deps/include/**/*.h"]),
    static_library = "deps/darwin-x86_64/libv8.a",
)

cc_import(
    name = "linux_imported_dylib",
    hdrs = glob(["deps/include/**/*.h"]),
    static_library = "deps/linux-x86_64/libv8.a",
)

go_library(
    name = "go_default_library",
    srcs = [
        "cgo.go",
        "engine.go",
        "errors.go",
        "modules.go",
        "v8engine.cc",
        "v8engine.go",
        "v8engine.h",
        "value.go",
    ],
    cdeps = select({
        "@io_bazel_rules_go//go/platform:darwin": [":darwin_imported_dylib"],
        "//conditions:default": [":linux_imported_dylib"],
    }),
    cgo = True,
    clinkopts = [
        "-pthread -lv8",
    ] + select({
        "@io_bazel_rules_go//go/platform:android": [
            "-Lpkg/v8engine/deps/linux-x86_64",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "-Lpkg/v8engine/deps/darwin-x86_64",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "-Lpkg/v8engine/deps/darwin-x86_64",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "-Lpkg/v8engine/deps/linux-x86_64",
        ],
        "//conditions:default": [],
    }),
    copts = [],  # keep
    cxxopts = ["-fno-rtti -fpic -Ipkg/v8engine/deps/include -std=c++14"],
    importpath = "github.com/BlazerodJS/blazerod/pkg/v8engine",
    visibility = ["//visibility:public"],
)
